Fix too long prototype lines in Doxygen.

--- a/doc/doxy-style.css
+++ b/doc/doxy-style.css
@@ -360,7 +360,7 @@ td.memSeparator {
 }
 
 .memname {
-	white-space: nowrap;
+	/*white-space: nowrap;*/
 	font-weight: bold;
 }
 
